--- a/meta-mld-source/meta-hardware/conf/layer.conf
+++ b/meta-mld-source/meta-hardware/conf/layer.conf
@@ -11,4 +11,4 @@ BBFILE_PRIORITY_meta-hardware-layer = "7"
 
 OEA-META-AIRDIGITAL-BASE := '${@os.path.normpath("${LAYERDIR}/")}'
 
-LAYERSERIES_COMPAT_meta-hardware-layer = "sumo"
+LAYERSERIES_COMPAT_meta-hardware-layer = "sumo thud"
