--- a/meta-mld-source/meta-hardware/meta-amlogic/conf/layer.conf
+++ b/meta-mld-source/meta-hardware/meta-amlogic/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "amlogic"
 BBFILE_PATTERN_amlogic = "^${LAYERDIR}/"
 BBFILE_PRIORITY_amlogic = "6"
 
-LAYERSERIES_COMPAT_amlogic = "sumo"
+LAYERSERIES_COMPAT_amlogic = "sumo thud"
