--- a/meta-mld-source/meta-hardware/meta-x86/conf/layer.conf
+++ b/meta-mld-source/meta-hardware/meta-x86/conf/layer.conf
@@ -9,6 +9,6 @@ BBFILE_COLLECTIONS += "genericx86"
 BBFILE_PATTERN_genericx86 := "^${LAYERDIR}/"
 BBFILE_PRIORITY_genericx86 = "7"
 
-LAYERSERIES_COMPAT_genericx86 = "sumo"
+LAYERSERIES_COMPAT_genericx86 = "sumo thud"
 
 OEA-META-AIRDIGITAL-BASE := '${@os.path.normpath("${LAYERDIR}/")}'
