--- a/meta-mld-source/conf/layer.conf
+++ b/meta-mld-source/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "meta-mld-source-layer"
 BBFILE_PATTERN_meta-mld-source-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-mld-source-layer = "7"
 
-LAYERSERIES_COMPAT_meta-mld-source-layer = "sumo"
+LAYERSERIES_COMPAT_meta-mld-source-layer = "sumo thud"
 
 OEA-META-AIRDIGITAL-BASE := '${@os.path.normpath("${LAYERDIR}/")}'
 
