--- a/meta-mld-source/meta-hardware/meta-sunxi/conf/layer.conf
+++ b/meta-mld-source/meta-hardware/meta-sunxi/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILE_COLLECTIONS += "meta-sunxi"
 BBFILE_PATTERN_meta-sunxi := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-sunxi = "10"
 
-LAYERSERIES_COMPAT_meta-sunxi = "sumo"
+LAYERSERIES_COMPAT_meta-sunxi = "sumo thud"
