--- a/meta-mld-source/conf/distro/MLD.conf
+++ b/meta-mld-source/conf/distro/MLD.conf
@@ -58,7 +58,7 @@ OELAYOUT_ABI = "8"
 
 #INITRAMFS_FSTYPES = "cpio.gz"
 #INITRAMFS_IMAGE = "MLD-initramfs-${DATE}"
-INITRAMFS_IMAGE = "MLD-initramfs" 
+INITRAMFS_IMAGE = "mld-initramfs-x86" 
 INITRAMFS_IMAGE_BUNDLE = "1"
 
 IMAGE_FSTYPES = "iso"
