fix new Licence-structure and Kernel

--- a/meta-mld-source/conf/distro/MLD.conf
+++ b/meta-mld-source/conf/distro/MLD.conf
@@ -2,6 +2,9 @@ DISTRO = "MLD"
 DISTRO_NAME = "MLD"
 DISTRO_VERSION = "6.0"
 
+SDK_VENDOR = "-mldsdk"
+SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
+
 hostname_pn-base-files = "mld"
 
 MAINTAINER = "Claus Muus <mld@clausmuus.de>"
@@ -9,7 +12,6 @@ MAINTAINER = "Claus Muus <mld@clausmuus.de>"
 TARGET_VENDOR = "-mld"
 
 LOCALCONF_VERSION = "1"
-
 
 MLD_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland"
 MLD_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
