--- a/meta-mld-source/meta-hardware/meta-x86/conf/machine/genericx86-64.conf
+++ b/meta-mld-source/meta-hardware/meta-x86/conf/machine/genericx86-64.conf
@@ -3,6 +3,7 @@
 
 #@DESCRIPTION: Machine configuration for generic X86_64 (64-bit) PCs and servers. Supports a moderately wide range of drivers that should boot and be usable on "typical" hardware.
 
+DESCRIPTION = "amd64"
 
 IMAGE_FSTYPES = "iso"
 
